--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sharp": "^0.33.1"
   },
   "devDependencies": {
+    "cypress": "^13.6.6",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
